--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
