--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.5.6",
     "aos": "^2.3.4",
     "axios": "^1.5.1",
+    "flowbite-typography": "^1.0.3",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
