--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.16.0",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
