--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "node ./postinstall.cjs"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tinymce/tinymce-react": "^4.3.0",
     "aos": "^2.3.4",
     "axios": "^1.5.1",
     "flowbite-typography": "^1.0.3",
+    "fs-extra": "^11.1.1",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
@@ -26,7 +30,8 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "tinymce": "^6.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
