--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "start": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -17,7 +17,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tinymce/tinymce-react": "^4.3.0",
     "aos": "^2.3.4",
-    "axios": "^1.5.1",
+    "axios": "^1.6.2",
     "flowbite-typography": "^1.0.3",
     "fs-extra": "^11.1.1",
     "react": "^18.2.0",
