--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "postinstall": "node ./postinstall.cjs"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.13.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.6",
