--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@cloudinary/url-gen": "^1.13.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tinymce/tinymce-react": "^4.3.0",
