--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tinymce/tinymce-react": "^4.3.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "flowbite-typography": "^1.0.3",
     "fs-extra": "^11.1.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
