--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
