--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-confetti": "^6.1.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.11.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
