--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
